fixed a swig install bug (bad prefix) tweaked sconstruct to check for swig refactored adding workers (to allow root/geant checks)

--- a/workers/map/CppPrint/sconscript
+++ b/workers/map/CppPrint/sconscript
@@ -1,21 +1,8 @@
-require_root = True
+require_root = False
 require_g4 = False
 
 #get environment and project
 Import('env', 'project')
 localenv = env.Clone()
 
-#call back to jDev to build the project for us
-if (\
-   ((not require_root) or env['USE_ROOT']) and \
-   ((not require_g4) or env['USE_G4']) \
-   ):
-      
-   if require_root:
-      localenv.ParseConfig("root-config --cflags --ldflags --libs")  # UNCOMMENT for ROOT
-   
-   env.jDev.Buildit(localenv, project)
-else:
-   print "Not building %s because:" % project
-   print '\trequire_root = ', require_root
-   print '\trequire_g4 = ', require_g4
+env.jDev.Buildit(localenv, project, require_root, require_g4)
