--- a/.bzrignore
+++ b/.bzrignore
@@ -9,3 +9,142 @@ doc/man
 doc/html
 .sconf_temp
 .sconsign.dblite
+third_party/build/bzr-2.3b2
+third_party/build/clhep-2.0.4.7
+third_party/build/geant4.9.2.p01
+third_party/build/gsl-1.12
+third_party/build/jsoncpp-src-0.5.0
+third_party/build/nose-0.11.3
+third_party/build/Python-2.7
+third_party/build/recpack
+third_party/build/root_v5.22.00f
+third_party/build/swig-2.0.1
+third_party/source/bzr-2.3b2.tar.gz
+third_party/source/clhep-2.0.4.7.tgz
+third_party/source/geant4.9.2.p01.tar.gz
+third_party/source/geant_config.tar.gz
+third_party/source/geant_data.tar.gz
+third_party/source/gsl-1.12.tar.gz
+third_party/source/nose-0.11.3.tar.gz
+third_party/source/root_v5.22.00f.source.tar.gz
+third_party/source/scons-2.0.1.tar.gz
+third_party/source/recpack.src.20090424.tgz   
+*.os
+third_party/install/log/
+third_party/install/master/
+third_party/install/root/
+third_party/install/run/
+third_party/install/src/
+third_party/install/srv/
+third_party/install/bin/2to3
+third_party/install/bin/Cast-config
+third_party/install/bin/Evaluator-config
+third_party/install/bin/Exceptions-config
+third_party/install/bin/GenericFunctions-config
+third_party/install/bin/Geometry-config
+third_party/install/bin/Matrix-config
+third_party/install/bin/Random-config
+third_party/install/bin/RandomObjects-config
+third_party/install/bin/RefCount-config
+third_party/install/bin/Units-config
+third_party/install/bin/Vector-config
+third_party/install/bin/ccache-swig
+third_party/install/bin/clhep-config
+third_party/install/bin/clheplib
+third_party/install/bin/cloc-1.52.pl
+third_party/install/bin/cpplint.py
+third_party/install/bin/ddfs@
+third_party/install/bin/dialyzer@
+third_party/install/bin/epmd@
+third_party/install/bin/erl@
+third_party/install/bin/erlc@
+third_party/install/bin/escript@
+third_party/install/bin/g2root
+third_party/install/bin/genmap
+third_party/install/bin/genreflex
+third_party/install/bin/genreflex-rootcint
+third_party/install/bin/gsl-config
+third_party/install/bin/gsl-histogram
+third_party/install/bin/gsl-randist
+third_party/install/bin/h2root
+third_party/install/bin/hadd
+third_party/install/bin/idle
+third_party/install/bin/jsontestrunner
+third_party/install/bin/memprobe
+third_party/install/bin/nosetests
+third_party/install/bin/proofd
+third_party/install/bin/proofserv
+third_party/install/bin/proofserv.exe
+third_party/install/bin/pydoc
+third_party/install/bin/python
+third_party/install/bin/python-config@
+third_party/install/bin/python2.7
+third_party/install/bin/python2.7-config
+third_party/install/bin/recpack-config
+third_party/install/bin/rlibmap
+third_party/install/bin/rmkdepend
+third_party/install/bin/root
+third_party/install/bin/root-config
+third_party/install/bin/root.exe
+third_party/install/bin/rootcint
+third_party/install/bin/rootd
+third_party/install/bin/rootn.exe
+third_party/install/bin/roots
+third_party/install/bin/roots.exe
+third_party/install/bin/run_erl@
+third_party/install/bin/run_test@
+third_party/install/bin/smtpd.py
+third_party/install/bin/ssh2rpd
+third_party/install/bin/swig
+third_party/install/bin/test_lib_json
+third_party/install/bin/thisroot.csh
+third_party/install/bin/thisroot.sh
+third_party/install/bin/to_erl@
+third_party/install/bin/typer@
+third_party/install/include/CLHEP/
+third_party/install/include/geant4/
+third_party/install/include/gsl/
+third_party/install/include/json/
+third_party/install/include/python2.7/
+third_party/install/include/recpack/
+third_party/install/include/root/
+third_party/install/lib/erlang/
+third_party/install/lib/geant4/
+third_party/install/lib/libgsl.la
+third_party/install/lib/libgsl.so.0@
+third_party/install/lib/libgsl.so.0.13.0
+third_party/install/lib/libgslcblas.la
+third_party/install/lib/libgslcblas.so.0@
+third_party/install/lib/libgslcblas.so.0.0.0
+third_party/install/lib/libpython2.7.so.1.0
+third_party/install/lib/librecpack.la
+third_party/install/lib/librecpack.so.0@
+third_party/install/lib/librecpack.so.0.0.0
+third_party/install/lib/pkgconfig/
+third_party/install/lib/python2.7/
+third_party/install/lib/root/
+third_party/install/lib/scons-2.0.1/scons-2.0.1-py2.7.egg-info
+third_party/install/man/man1/bzr.1
+third_party/install/man/man1/nosetests.1
+third_party/install/share/aclocal/
+third_party/install/share/doc/
+third_party/install/share/emacs/
+third_party/install/share/info/
+third_party/install/share/root/
+third_party/install/share/swig/
+third_party/install/share/man/man3/
+third_party/install/share/man/man1/ccache-swig.1
+third_party/install/share/man/man1/cint.1
+third_party/install/share/man/man1/cmsd.1
+third_party/install/share/man/man1/g2root.1
+third_party/install/share/man/man1/g2rootold.1
+third_party/install/share/man/man1/genmap.1
+third_party/install/share/man/man1/genreflex-rootcint.1
+third_party/install/share/man/man1/genreflex.1
+third_party/install/share/man/man1/gsl-config.1
+third_party/install/share/man/man1/gsl-histogram.1
+third_party/install/share/man/man1/gsl-randist.1
+third_party/install/share/man/man1/h2root.1
+third_party/install/share/man/man1/hadd.1
+third_party/install/share/man/man1/makecint.1
+third_party/install/share/man/man1/memprobe.1
