Update to g4mice-2-4-1

--- a/.bzrignore
+++ b/.bzrignore
@@ -134,18 +134,180 @@ third_party/install/share/info/
 third_party/install/share/root/
 third_party/install/share/swig/
 third_party/install/share/man/man3/
-third_party/install/share/man/man1/ccache-swig.1
-third_party/install/share/man/man1/cint.1
-third_party/install/share/man/man1/cmsd.1
-third_party/install/share/man/man1/g2root.1
-third_party/install/share/man/man1/g2rootold.1
-third_party/install/share/man/man1/genmap.1
-third_party/install/share/man/man1/genreflex-rootcint.1
-third_party/install/share/man/man1/genreflex.1
-third_party/install/share/man/man1/gsl-config.1
-third_party/install/share/man/man1/gsl-histogram.1
-third_party/install/share/man/man1/gsl-randist.1
-third_party/install/share/man/man1/h2root.1
-third_party/install/share/man/man1/hadd.1
-third_party/install/share/man/man1/makecint.1
-third_party/install/share/man/man1/memprobe.1
+third_party/install/share/man/man1/*
+source/bzr-2.3b2.tar.gz
+source/geant4.9.2.p01.tar.gz
+source/geant4.9.2.p04.tar.gz
+source/geant_config.tar.gz
+source/geant_data.tar.gz
+source/gsl-1.12.tar.gz
+source/jsoncpp-src-0.5.0.tar.gz
+source/nose-0.11.3.tar.gz
+source/numpy-1.5.1.tar.gz
+source/recpack.tar.gz
+source/root_v5.22.00f.source.tar.gz
+source/root_v5.28.00.source.tar.gz
+source/scons-2.0.1.tar.gz
+source/swig-2.0.1.tar.gz
+source/third_party_source.tar.gz
+source/xboa-0.10.0.tar.gz
+install/bin
+install/include
+install/lib
+install/man
+install/share
+build/clhep-2.0.4.7
+build/geant4.9.2.p04
+build/gsl-1.12
+build/jsoncpp-src-0.5.0
+build/numpy-1.5.1
+build/Python-2.7
+build/recpack
+build/root_v5.28.00
+build/scons-2.0.1
+build/swig-2.0.1
+build/xboa-0.10.0
+build
+bin
+build
+configure
+COPYING
+doc
+env.csh
+ignore
+Makefile
+mausput
+README
+SConstruct
+SConstruct~
+SConstruct.~1~
+src
+tests
+third_party
+build/InputPyEmptyDocument.py
+build/InputPyEmptyDocument.pyc
+build/InputPyJSON.py
+build/InputPyJSON.pyc
+build/libsimulate.so
+build/MapCppBeamMaker.py
+build/MapCppBeamMaker.pyc
+build/_MapCppBeamMaker.so
+build/MapCppPrint.py
+build/MapCppPrint.pyc
+build/_MapCppPrint.so
+build/MapCppSimulation.py
+build/MapCppSimulation.pyc
+build/_MapCppSimulation.so
+build/MapCppTOFDigitization.py
+build/MapCppTOFDigitization.pyc
+build/_MapCppTOFDigitization.so
+build/MapCppTrackerDigitization.py
+build/MapCppTrackerDigitization.pyc
+build/_MapCppTrackerDigitization.so
+build/MapPyDoNothing.py
+build/MapPyDoNothing.pyc
+build/MapPyFakeTestSimulation.py
+build/MapPyFakeTestSimulation.pyc
+build/MapPyGroup.py
+build/MapPyGroup.pyc
+build/MapPyPrint.py
+build/MapPyRemoveTracks.py
+build/MapPyRemoveTracks.pyc
+build/MapPyVirtualPlanes.py
+build/MapPyVirtualPlanes.pyc
+build/OutputPyDoNothing.py
+build/OutputPyJSON.py
+build/OutputPyJSON.pyc
+build/ReducePyAcceleratorParameters.py
+build/ReducePyDoNothing.py
+build/ReducePyDoNothing.pyc
+build/test_always_true.py
+build/test_always_true.pyc
+build/test_core_configuration.py
+build/test_core_configuration.pyc
+build/test_core_go.py
+build/test_core_go.pyc
+build/test_cpp_unit
+build/test_geometry.py
+build/test_geometry.pyc
+build/test_InputPyEmptyDocument.py
+build/test_InputPyEmptyDocument.pyc
+build/test_InputPyJson.py
+build/test_InputPyJson.pyc
+build/test_MapCppBeamMaker.py
+build/test_MapCppBeamMaker.pyc
+build/test_MapCppPrint.py
+build/test_MapCppPrint.pyc
+build/test_MapCppSimulation.py
+build/test_MapCppSimulation.pyc
+build/test_MapCppTOFDigitization.py
+build/test_MapCppTOFDigitization.pyc
+build/test_MapCppTrackerDigitization.py
+build/test_MapCppTrackerDigitization.pyc
+build/test_MapPyDoNothing.py
+build/test_MapPyDoNothing.pyc
+build/test_MapPyFakeTestSimulation.py
+build/test_MapPyFakeTestSimulation.pyc
+build/test_MapPyRemoveTracks.py
+build/test_MapPyRemoveTracks.pyc
+build/test_MapPyVirtualPlanes.py
+build/test_MapPyVirtualPlanes.pyc
+build/test_OutputPyDoNothing.py
+build/test_OutputPyJSON.py
+build/test_OutputPyJSON.pyc
+install/share/man
+install/share/man/man1
+install/share/man/man1/ccache-swig.1
+install/share/man/man1/cint.1
+install/share/man/man1/cmsd.1
+install/share/man/man1/g2root.1
+install/share/man/man1/g2rootold.1
+install/share/man/man1/genmap.1
+install/share/man/man1/genreflex.1
+install/share/man/man1/genreflex-rootcint.1
+install/share/man/man1/gsl-config.1
+install/share/man/man1/gsl-histogram.1
+install/share/man/man1/gsl-randist.1
+install/share/man/man1/h2root.1
+install/share/man/man1/hadd.1
+install/share/man/man1/hist2workspace.1
+install/share/man/man1/makecint.1
+install/share/man/man1/memprobe.1
+install/share/man/man1/olbd.1
+install/share/man/man1/pq2.1
+install/share/man/man1/pq2-ana-dist.1
+install/share/man/man1/pq2-cache.1
+install/share/man/man1/pq2-info-server.1
+install/share/man/man1/pq2-ls.1
+install/share/man/man1/pq2-ls-files.1
+install/share/man/man1/pq2-ls-files-server.1
+install/share/man/man1/pq2-put.1
+install/share/man/man1/pq2-redistribute.1
+install/share/man/man1/pq2-rm.1
+install/share/man/man1/pq2-verify.1
+install/share/man/man1/prepareHistFactory.1
+install/share/man/man1/proofd.1
+install/share/man/man1/proofserv.1
+install/share/man/man1/proofserva.1
+install/share/man/man1/python2.7.1
+install/share/man/man1/rlibmap.1
+install/share/man/man1/rmkdepend.1
+install/share/man/man1/root.1
+install/share/man/man1/roota.1
+install/share/man/man1/rootcint.1
+install/share/man/man1/root-config.1
+install/share/man/man1/rootd.1
+install/share/man/man1/root.exe.1
+install/share/man/man1/rootn.exe.1
+install/share/man/man1/roots.exe.1
+install/share/man/man1/setup-pq2.1
+install/share/man/man1/ssh2rpd.1
+install/share/man/man1/system.rootdaemonrc.1
+install/share/man/man1/xprep.1
+install/share/man/man1/xproofd.1
+install/share/man/man1/xrd.1
+install/share/man/man1/xrdcp.1
+install/share/man/man1/xrdgsiproxy.1
+install/share/man/man1/xrdpwdadmin.1
+install/share/man/man1/xrdstagetool.1
+install/share/man/man1/xrootd.1
