--- a/.bzrignore
+++ b/.bzrignore
@@ -1,14 +1,26 @@
 *.o
+*.os
 *~
 *.tmp
+build/*
 env.sh
+env.csh
 config.log
-doc/man
-doc/html
 .sconf_temp
 .sconsign.dblite
-build
-env.csh
 mausput
 gmon.out
+tmp/*
+src/map/*/build
+tests/style/cpplint_test/test_cpplint_out.out
+tests/cpp_unit/test_cpp_unit
+third_party/home
+third_party/build/*
+third_party/install/bin/*
+third_party/install/include/*
+third_party/install/lib/*
+third_party/install/share/*
+third_party/install/share/man/man3
+third_party/install/share/man/man1/*
+third_party/source/*
 
