--- a/.bzrignore
+++ b/.bzrignore
@@ -16,6 +16,8 @@ tmp/*
 src/map/*/build
 tests/style/cpplint_test/test_cpplint_out.out
 tests/cpp_unit/test_cpp_unit
+doc/doxygen_backend
+doc/doxygen_framework
 third_party/home
 third_party/build/*
 third_party/install/bin/*
