--- a/.bzrignore
+++ b/.bzrignore
@@ -1,3 +1,4 @@
+*.gcov
 *.gcda
 *.gcno
 *.o
@@ -29,3 +30,6 @@ third_party/source/*
 tests/integration/optics/log.*
 tests/integration/optics/envelope*
 tests/integration/optics/optics
+doc/doxygen_backend/
+doc/doxygen_framework/
+
