SConscripts modified to reflect dependency spec

--- a/src/input/InputCppDAQData/sconscript
+++ b/src/input/InputCppDAQData/sconscript
@@ -11,4 +11,4 @@ localenv = env.Clone()
 dir = 'Interface'
 srclst = map(lambda x: os.path.join(dir, x), glob.glob(os.path.join(project,dir, '*.cc')))
 
-env.jDev.Buildit(localenv, project, require_root, require_g4, require_unpacker)
+env.jDev.Buildit(localenv, project, [])
