--- a/.bzrignore
+++ b/.bzrignore
@@ -19,6 +19,7 @@ unit_test
 tmp/*
 src/common_cpp/DataStructure/*.d
 src/input/*/build
+src/output/*/build
 src/map/*/build
 tests/cpp_unit/test_cpp_unit
 third_party/home
@@ -47,4 +48,5 @@ doc/doc_src/*.aux
 doc/doc_src/*.log
 doc/doc_src/detectors/*.aux
 doc/doc_src/detectors/*.log
+doc/coverage
 
