--- a/.bzrignore
+++ b/.bzrignore
@@ -21,6 +21,7 @@ src/common_cpp/DataStructure/*.d
 src/input/*/build
 src/output/*/build
 src/map/*/build
+src/reduce/*/build
 tests/cpp_unit/test_cpp_unit
 third_party/home
 third_party/build/*
