--- a/tests/integration/test_simulation/test_virtual_planes/defaults.config
+++ b/tests/integration/test_simulation/test_virtual_planes/defaults.config
@@ -1,3 +1,22 @@
+#  This file is part of MAUS: http://micewww.pp.rl.ac.uk:8080/projects/maus
+# 
+#  MAUS is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+# 
+#  MAUS is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+# 
+#  You should have received a copy of the GNU General Public License
+#  along with MAUS.  If not, see <http://www.gnu.org/licenses/>.
+
+"""
+Configuration for virtual planes defaults test
+"""
+
 spill_generator_number_of_spills = 1
 
 beam = {
@@ -7,7 +26,7 @@ beam = {
        "reference":{
             "position":{"x":0.0, "y":0.0, "z":0.0},
             "momentum":{"x":0.0, "y":0.0, "z":1.0},
-            "particle_id":2212, "energy":10000.0, "time":0.0, "random_seed":0
+            "particle_id":2212, "energy":5000.0, "time":0.0, "random_seed":0
        },
        "random_seed_algorithm":"incrementing_random",
        "n_particles_per_spill":1,
@@ -20,7 +39,22 @@ beam = {
        "coupling":{"coupling_mode":"none"}
     },{
        "reference":{
-            "position":{"x":0.0, "y":0.0, "z":300.0},
+            "position":{"x":0.0, "y":0.0, "z":101.0},
+            "momentum":{"x":0.0, "y":0.0, "z":1.0},
+            "particle_id":2212, "energy":5000.0, "time":0.0, "random_seed":0
+       },
+       "random_seed_algorithm":"incrementing_random",
+       "n_particles_per_spill":1,
+       "transverse":{
+          "transverse_mode":"pencil",
+       },
+       "longitudinal":{"longitudinal_mode":"pencil",
+                   "momentum_variable":"p",
+       },
+       "coupling":{"coupling_mode":"none"}
+    },{
+       "reference":{
+            "position":{"x":0.0, "y":0.0, "z":101.0},
             "momentum":{"x":0.0, "y":0.0, "z":-1.0},
             "particle_id":2212, "energy":5000.0, "time":0.0, "random_seed":0
        },
