Removed DetectorEvent (consolodated with ParticleTrack). Cleaned up reconstruction class hierarchy documentation.

--- a/doc/doc_src/reconstruction/Makefile
+++ b/doc/doc_src/reconstruction/Makefile
@@ -4,5 +4,5 @@ all:
 	pdflatex global_track_reconstruction_specification.tex
 
 clean:
-	rm global_track_reconstruction_specification.aux global_track_reconstruction_specification.dvi global_track_reconstruction_specification.log global_track_reconstruction_specification.toc global_track_reconstruction_specification.pdf
+	rm -f global_track_reconstruction_specification.aux global_track_reconstruction_specification.dvi global_track_reconstruction_specification.log global_track_reconstruction_specification.toc global_track_reconstruction_specification.pdf
 
