Added headers for new recon. input classes. Updated recon. spec PDF.

--- a/doc/doc_src/reconstruction/Makefile
+++ b/doc/doc_src/reconstruction/Makefile
@@ -2,6 +2,7 @@ all:
 	dot -Tpdf class_hierarchy_main.dot -oclass_hierarchy_main.pdf
 	dot -Tpdf class_hierarchy_interfaces.dot -oclass_hierarchy_interfaces.pdf
 	pdflatex global_track_reconstruction_specification.tex
+	cp global_track_reconstruction_specification.pdf ../../
 
 clean:
 	rm -f global_track_reconstruction_specification.aux global_track_reconstruction_specification.dvi global_track_reconstruction_specification.log global_track_reconstruction_specification.toc global_track_reconstruction_specification.pdf
