Added Transport functions to OpticsModels to allow point to point transport (as opposed to first plane to point transport).

--- a/doc/doc_src/reconstruction/Makefile
+++ b/doc/doc_src/reconstruction/Makefile
@@ -1,6 +1,8 @@
 all:
 	dot -Tpdf class_hierarchy_main.dot -oclass_hierarchy_main.pdf
+	dot -Tpng class_hierarchy_main.dot -oclass_hierarchy_main.png
 	dot -Tpdf class_hierarchy_interfaces.dot -oclass_hierarchy_interfaces.pdf
+	dot -Tpng class_hierarchy_interfaces.dot -oclass_hierarchy_interfaces.png
 	pdflatex global_track_reconstruction_specification.tex
 	cp global_track_reconstruction_specification.pdf ../../
 
