A bit of reoganisation

--- a/tests/integration/test_simulation/test_physics_model_full/files/g4bl/g4bl_deck.in
+++ b/tests/integration/test_simulation/test_physics_model_full/files/g4bl/g4bl_deck.in
@@ -6,14 +6,14 @@
 
 # QGSP is the "default" physics use-case for HEP
 physics QGSP_BIC
-param   maxStep=_step_
+param   maxStep=__step__
 
-beam gaussian meanMomentum=_momentum_ sigmaP=1e-15 sigmaXp=1e-15 sigmaYp=1e-15  \
-	firstEvent=_seed_*_nev_ nEvents=_nev_ beamZ=-500 particle=_pid_
+beam gaussian meanMomentum=__momentum__ sigmaP=1e-15 sigmaXp=1e-15 sigmaYp=1e-15  \
+	firstEvent=__seed__*__nev__ nEvents=__nev__ beamZ=-500 particle=__pid__
 
 # define a detector for the center of each absorber
 virtualdetector Det radius=1000. length=1 format=for009 file=for009_g4bl
-tubs Absorber length=_thickness_ outerRadius=1000.0 color=1.0,0.0,1.0 material=_material_
+tubs Absorber length=__thickness__ outerRadius=1000.0 color=1.0,0.0,1.0 material=__material__
 
 place Det z=-200.
 place Absorber
