--- a/tests/integration/test_simulation/test_physics_model_full/files/muon1/absorber_test.in
+++ b/tests/integration/test_simulation/test_physics_model_full/files/muon1/absorber_test.in
@@ -15,6 +15,9 @@ Absorber __thickness__mm 1000.0mm 1000.0mm __material__
 {Output-aperture radius OutputFile}
 OUTDC 1000.0mm 'muon1_output.csv'
 
+{Drift Length}
+TinyDrift 1cm
+
 {Output-aperture radius stopping}
 ENDOUT 1001.0mm 1
 
