--- a/src/input/InputCppDAQOnlineData/sconscript
+++ b/src/input/InputCppDAQOnlineData/sconscript
@@ -16,7 +16,7 @@ local_env.Append(LIBS=['MDMonitor'])
 
 # Return("my_variable") should return a value - but doesn't appear to work
 # instead I set a flag in .sconf_temp/ to indicate a subproject failed
-if (not conf.CheckCXXHeader('monitor.h')):
+if (not conf.CheckCXXHeader('daq/monitor.h')):
     print """
 monitor.h file required for online operation not found.
 InputCppDAQOnlineData module will not be built.
