--- a/.bzrignore
+++ b/.bzrignore
@@ -52,7 +52,7 @@ doc/doc_src/detectors/*.log
 doc/coverage
 src/common_cpp/DataStructure/MausDataStructure.cc
 src/common_cpp/DataStructure/MausDataStructure.h
-
+src/legacy/FILES/Models/Modules/BeamLine/*.table
 third_party/install/man/man1
 third_party/install/man/man3
 install_log_std
