--- a/.bzrignore
+++ b/.bzrignore
@@ -63,3 +63,5 @@ env_geant4.9.5.p01.sh
 files/geometry/ConfigUpload.py
 third_party/source/easy_install/*
 tests/integration/test_simulation/test_tof/tof_mc_plotter
+beta_vs_z.png
+bz_vs_z.png
