--- a/bin/user/scifi/cpp/Makefile
+++ b/bin/user/scifi/cpp/Makefile
@@ -1,4 +1,4 @@
-all : scifi_offline_viewer scifi_momentum_analysis
+all : scifi_offline_viewer
 
 scifi_offline_viewer : scifi_offline_viewer.cc
 	@echo "Running with ${MAUS_ROOT_DIR} on "
@@ -15,21 +15,6 @@ scifi_offline_viewer : scifi_offline_viewer.cc
 	                      -lMausCpp \
 	                       -Wl,--no-as-needed
 	                     
-scifi_momentum_analysis : scifi_momentum_analysis.cc
-	@echo "Running with ${MAUS_ROOT_DIR} on "
-	@echo `uname -a` # note this Makefile fails on Ubuntu due to ROOT errors
-	g++ scifi_momentum_analysis.cc -o scifi_momentum_analysis \
-	                      -I${MAUS_ROOT_DIR}/ \
-	                      -I${MAUS_ROOT_DIR}/src/common_cpp \
-	                      -I${MAUS_ROOT_DIR}/src/legacy \
-	                      -I${MAUS_THIRD_PARTY}/third_party/install/include \
-	                      -I${ROOTSYS}/include \
-	                      -L${MAUS_ROOT_DIR}/build/ \
-	                      `root-config --ldflags` \
-	                      `${ROOTSYS}/bin/root-config --glibs` \
-	                      -lMausCpp \
-	                       -Wl,--no-as-needed
-
 clean:
-	rm scifi_offline_viewer scifi_momentum_analysis;
+	rm scifi_offline_viewer;
 
