Bug fix for scifi s-z plotter

--- a/bin/user/scifi/cpp/Makefile
+++ b/bin/user/scifi/cpp/Makefile
@@ -1,9 +1,12 @@
+CC = g++
+CFLAGS = -DDEBUG -Wall
+
 all : scifi_offline_viewer scifi_momentum_analysis scifi_analysis
 
 scifi_offline_viewer : scifi_offline_viewer.cc
 	@echo "Running with ${MAUS_ROOT_DIR} on "
 	@echo `uname -a` # note this Makefile fails on Ubuntu due to ROOT errors
-	g++ scifi_offline_viewer.cc -o scifi_offline_viewer \
+	$(CC) $(CFLAGS) scifi_offline_viewer.cc -o scifi_offline_viewer \
 	                      -I${MAUS_ROOT_DIR}/ \
 	                      -I${MAUS_ROOT_DIR}/src/common_cpp \
 	                      -I${MAUS_ROOT_DIR}/src/legacy \
@@ -14,9 +17,9 @@ scifi_offline_viewer : scifi_offline_viewer.cc
 	                      `${ROOTSYS}/bin/root-config --glibs` \
 	                      -lMausCpp \
 	                       -Wl,--no-as-needed
-	                     
+
 scifi_momentum_analysis : scifi_momentum_analysis.cc
-	g++ scifi_momentum_analysis.cc -o scifi_momentum_analysis \
+	$(CC) $(CFLAGS) scifi_momentum_analysis.cc -o scifi_momentum_analysis \
 	                      -I${MAUS_ROOT_DIR}/ \
 	                      -I${MAUS_ROOT_DIR}/src/common_cpp \
 	                      -I${MAUS_ROOT_DIR}/src/legacy \
@@ -29,7 +32,7 @@ scifi_momentum_analysis : scifi_momentum_analysis.cc
 	                       -Wl,--no-as-needed
 
 scifi_analysis : scifi_analysis.cc
-	g++ scifi_analysis.cc -o scifi_analysis \
+	$(CC) $(CFLAGS) scifi_analysis.cc -o scifi_analysis \
 	                      -I${MAUS_ROOT_DIR}/ \
 	                      -I${MAUS_ROOT_DIR}/src/common_cpp \
 	                      -I${MAUS_ROOT_DIR}/src/legacy \
