Adding a link from each SciFiTrackPoint to the parent SciFiCluster, completing the chain from scifi recon to MC

--- a/bin/user/scifi/cpp/Makefile
+++ b/bin/user/scifi/cpp/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -DDEBUG -Wall
+CFLAGS = -DDEBUG -ggdb -Wall
 
 all : scifi_offline_viewer scifi_momentum_analysis scifi_analysis
 
