More analysis work

--- a/bin/user/scifi/cpp/Makefile
+++ b/bin/user/scifi/cpp/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 CFLAGS = -DDEBUG -ggdb -Wall
 
-all : scifi_offline_viewer scifi_analysis scifi_momentum_analysis
+all : scifi_offline_viewer scifi_analysis scifi_momentum_analysis_new
 
 scifi_offline_viewer : scifi_offline_viewer.cc
 	@echo "Running with ${MAUS_ROOT_DIR} on "
@@ -31,10 +31,11 @@ scifi_analysis : scifi_analysis.cc
 	                      -lMausCpp \
 	                       -Wl,--no-as-needed
 
-scifi_momentum_analysis : scifi_momentum_analysis.cc
+
+scifi_momentum_analysis_new : scifi_momentum_analysis_new.cc
 	@echo "Running with ${MAUS_ROOT_DIR} on "
 	@echo `uname -a` # note this Makefile fails on Ubuntu due to ROOT errors
-	$(CC) $(CFLAGS) scifi_momentum_analysis.cc -o scifi_momentum_analysis \
+	$(CC) $(CFLAGS) scifi_momentum_analysis_new.cc -o scifi_momentum_analysis_new \
 	                      -I${MAUS_ROOT_DIR}/ \
 	                      -I${MAUS_ROOT_DIR}/src/common_cpp \
 	                      -I${MAUS_ROOT_DIR}/src/legacy \
@@ -47,5 +48,5 @@ scifi_momentum_analysis : scifi_momentum_analysis.cc
 	                       -Wl,--no-as-needed
 
 clean:
-	rm scifi_offline_viewer scifi_analysis scifi_momentum_analysis;
+	rm scifi_offline_viewer scifi_analysis scifi_momentum_analysis_new;
 
