--- a/.bzrignore
+++ b/.bzrignore
@@ -66,3 +66,4 @@ third_party/source/easy_install/*
 tests/integration/test_simulation/test_tof/tof_mc_plotter
 bin/examples/optics_step-4/*.png
 
+src/map/MapPyBeamlineSimulation/G4bl/maps/TypeIBend_6InchGap_tapered.map
