--- a/bin/examples/poly_patch/Makefile
+++ b/bin/examples/poly_patch/Makefile
@@ -1,6 +1,6 @@
-CPPFLAGS := -I${MAUS_ROOT_DIR}/src/common_cpp -I${MAUS_ROOT_DIR}/bin/examples/poly_patch -Wall -pg -I${MAUS_THIRD_PARTY}/third_party/install/include \
+CPPFLAGS := -I${MAUS_ROOT_DIR}/src/common_cpp -I${MAUS_ROOT_DIR}/bin/examples/poly_patch -Wall -pg -g -I${MAUS_THIRD_PARTY}/third_party/install/include -I${ROOTSYS}/include \
 
-MATH_OBJ_FILES :=  $(patsubst rogers_math/%.cc,object/%.o,$(wildcard rogers_math/*.cc))
+MATH_OBJ_FILES :=  $(patsubst math/%.cc,object/%.o,$(wildcard math/*.cc))
 
 TEST_OBJ_FILES :=  $(patsubst test/%.cc,object/%.o,$(wildcard test/*.cc))
 
@@ -8,7 +8,7 @@ object/%.o : test/%.cc
 	@echo "Test files\n$(TEST_OBJ_FILES)"
 	$(CXX) -c $(CPPFLAGS) $< -o $@
 
-object/%.o : rogers_math/%.cc
+object/%.o : math/%.cc
 	@echo "$Math files\n(MATH_OBJ_FILES)"
 	$(CXX) -c $(CPPFLAGS) $< -o $@
 
@@ -26,13 +26,14 @@ all : $(TEST_OBJ_FILES) $(MATH_OBJ_FILES)
 	                      $(MATH_OBJ_FILES) \
 	                      $(TEST_OBJ_FILES) \
 	                      `root-config --ldflags` \
-	                      `${ROOTSYS}/bin/root-config --glibs` \
+	                      `root-config --glibs` \
 	                      -lMausCpp \
 	                      -lgsl \
 	                      -lgtest \
-	                       -Wl,--no-as-needed -pg
+	                       -Wl,--no-as-needed -pg -g
 
 clean:
-	rm poly_patch;
 	rm $(MATH_OBJ_FILES);
 	rm $(TEST_OBJ_FILES);
+	rm poly_patch;
+
