--- a/bin/examples/poly_patch/Makefile
+++ b/bin/examples/poly_patch/Makefile
@@ -1,4 +1,4 @@
-CPPFLAGS := -I${MAUS_ROOT_DIR}/src/common_cpp -I${MAUS_ROOT_DIR}/bin/examples/poly_patch -Wall -pg -g -I${MAUS_THIRD_PARTY}/third_party/install/include -I${ROOTSYS}/include \
+CPPFLAGS := -I${MAUS_ROOT_DIR}/src/common_cpp -I${MAUS_ROOT_DIR}/bin/examples/poly_patch -g -pg -Wall -I${MAUS_THIRD_PARTY}/third_party/install/include -I${ROOTSYS}/include \
 
 MATH_OBJ_FILES :=  $(patsubst math/%.cc,object/%.o,$(wildcard math/*.cc))
 
@@ -30,7 +30,7 @@ all : $(TEST_OBJ_FILES) $(MATH_OBJ_FILES)
 	                      -lMausCpp \
 	                      -lgsl \
 	                      -lgtest \
-	                       -Wl,--no-as-needed -pg -g
+	                       -Wl,--no-as-needed -g -pg
 
 clean:
 	rm $(MATH_OBJ_FILES);
